add pages to view page for data element

--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -8,3 +8,7 @@
 // App Shared Sass variables belong in app.variables.scss.
 
 @import "../pages/setup/setup.scss";
+@import "../pages/data-element-groups-set/data-element-groups-set.scss";
+@import "../pages/data-element-groups/data-element-groups.scss";
+@import "../pages/data-element/data-element.scss";
+@import "../pages/data-element-list/data-element-list.scss";
